--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^1.0.7",
-    "@tarojs/components": "1.0.7",
-    "@tarojs/redux": "^1.0.7",
-    "@tarojs/redux-h5": "^1.0.7",
-    "@tarojs/router": "1.0.7",
-    "@tarojs/taro": "1.0.7",
-    "@tarojs/taro-h5": "1.0.7",
-    "@tarojs/taro-weapp": "1.0.7",
+    "@tarojs/async-await": "^1.1.0-beta.15",
+    "@tarojs/components": "1.1.0-beta.15",
+    "@tarojs/redux": "^1.1.0-beta.15",
+    "@tarojs/redux-h5": "^1.1.0-beta.15",
+    "@tarojs/router": "1.1.0-beta.15",
+    "@tarojs/taro": "1.1.0-beta.15",
+    "@tarojs/taro-h5": "1.1.0-beta.15",
+    "@tarojs/taro-weapp": "1.1.0-beta.15",
     "nervjs": "^1.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
@@ -32,12 +32,12 @@
     "taro-ui": "^1.3.1"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "1.0.7",
-    "@tarojs/plugin-csso": "1.0.7",
-    "@tarojs/plugin-less": "1.0.7",
-    "@tarojs/plugin-sass": "1.0.7",
-    "@tarojs/plugin-uglifyjs": "1.0.7",
-    "@tarojs/webpack-runner": "1.0.7",
+    "@tarojs/plugin-babel": "1.1.0-beta.15",
+    "@tarojs/plugin-csso": "1.1.0-beta.15",
+    "@tarojs/plugin-less": "1.1.0-beta.15",
+    "@tarojs/plugin-sass": "1.1.0-beta.15",
+    "@tarojs/plugin-uglifyjs": "1.1.0-beta.15",
+    "@tarojs/webpack-runner": "1.1.0-beta.15",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "babel-eslint": "^8.2.3",
