--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^1.1.4",
-    "@tarojs/components": "^1.1.4",
-    "@tarojs/redux": "^1.1.4",
-    "@tarojs/redux-h5": "^1.1.4",
-    "@tarojs/router": "^1.1.4",
-    "@tarojs/taro": "^1.1.4",
-    "@tarojs/taro-alipay": "^1.1.4",
-    "@tarojs/taro-h5": "^1.1.4",
-    "@tarojs/taro-swan": "^1.1.4",
-    "@tarojs/taro-weapp": "^1.1.4",
+    "@tarojs/async-await": "^1.1.9",
+    "@tarojs/components": "^1.1.8",
+    "@tarojs/redux": "^1.1.9",
+    "@tarojs/redux-h5": "^1.1.8",
+    "@tarojs/router": "^1.1.8",
+    "@tarojs/taro": "^1.1.8",
+    "@tarojs/taro-alipay": "^1.1.8",
+    "@tarojs/taro-h5": "^1.1.8",
+    "@tarojs/taro-swan": "^1.1.8",
+    "@tarojs/taro-weapp": "^1.1.9",
+    "@tarojs/webpack-runner": "^1.1.9",
     "nervjs": "^1.3.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
@@ -35,23 +36,26 @@
     "taro-ui": "^1.4.0"
   },
   "devDependencies": {
+    "@tarojs/plugin-babel": "^1.1.9",
+    "@tarojs/plugin-csso": "^1.1.8",
+    "@tarojs/plugin-less": "^1.1.8",
+    "@tarojs/plugin-sass": "^1.1.9",
+    "@tarojs/plugin-uglifyjs": "^1.1.8",
+    "@tarojs/webpack-runner": "^1.1.8",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
-    "@tarojs/plugin-babel": "^1.1.4",
-    "@tarojs/plugin-csso": "^1.1.4",
-    "@tarojs/plugin-less": "^1.1.4",
-    "@tarojs/plugin-uglifyjs": "^1.1.4",
-    "@tarojs/webpack-runner": "^1.1.4",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
+    "dva-core": "^1.4.0",
+    "dva-loading": "^2.0.6",
     "eslint": "^4.19.1",
-    "eslint-config-taro": "^1.1.4",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-taro": "^1.1.8",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-taro": "^1.1.4"
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-taro": "^1.1.8"
   }
 }
